state-chain/custom-rpc/src/snapshots/custom_rpc__type_decoder__test__assets.snap
---
source: state-chain/custom-rpc/src/type_decoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "Asset",
      "values": {
        "any": {
          "name": "Flip",
          "values": []
        },
        "eth": {
          "name": "Eth",
          "values": []
        },
        "btc": {
          "name": "Btc",
          "values": []
        },
        "dot": {
          "name": "Dot",
          "values": []
        }
      }
    }
  ]
}
