state-chain/custom-rpc/src/snapshots/custom_rpc__type_decoder__test__dispatch_error.snap
---
source: state-chain/custom-rpc/src/type_decoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "DispatchError",
      "values": {
        "module": {
          "name": "Module",
          "values": [
            {
              "index": 2,
              "error": [
                0,
                1,
                2,
                3
              ]
            }
          ]
        },
        "others": {
          "name": "Other",
          "values": []
        }
      }
    }
  ]
}
