state-chain/custom-rpc/src/snapshots/custom_rpc__type_decoder__test__external_address_types.snap
---
source: state-chain/custom-rpc/src/type_decoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "EncodedAddress",
      "values": {
        "eth": {
          "name": "Eth",
          "values": [
            [
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3,
              3
            ]
          ]
        },
        "dot": {
          "name": "Dot",
          "values": [
            [
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4,
              4
            ]
          ]
        },
        "btc": {
          "name": "Btc",
          "values": [
            [
              98,
              99,
              49,
              113,
              97,
              114,
              48,
              115,
              114,
              114,
              114,
              55,
              120,
              102,
              107,
              118,
              121,
              53,
              108,
              54,
              52,
              51,
              108,
              121,
              100,
              110,
              119,
              57,
              114,
              101,
              53,
              57,
              103,
              116,
              122,
              122,
              119,
              102,
              53,
              109,
              100,
              113
            ]
          ]
        }
      }
    }
  ]
}
