state-chain/custom-rpc/src/snapshots/custom_rpc__type_decoder__test__primitives.snap
---
source: state-chain/custom-rpc/src/type_decoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "Primitives",
      "values": {
        "num": 123,
        "text": "Hello",
        "byte_array": [
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2,
          2
        ]
      }
    }
  ]
}
