state-chain/custom-rpc/src/snapshots/custom_rpc__type_decoder__test__unit_event.snap
---
source: state-chain/custom-rpc/src/type_decoder.rs
expression: value
---
{
  "name": "Inner",
  "values": [
    {
      "name": "Unit",
      "values": []
    }
  ]
}
